--- a/flying.html
+++ b/flying.html
@@ -66,6 +66,9 @@
                     .then(data => {
                         document.getElementById('controller-hours').textContent = ` ${data.controllerHours}`;
                         document.getElementById('pilot-hours').textContent = ` ${data.pilotHours}`;
+                        document.getElementById('s1-hours').textContent = ` ${data.s1}`;
+                        document.getElementById('s2-hours').textContent = ` ${data.s2}`;
+                        document.getElementById('s3-hours').textContent = ` ${data.s3}`;
                     })
                     .catch(error => {
                         console.error('Error:', error);
