--- a/flying.html
+++ b/flying.html
@@ -64,28 +64,12 @@
                 fetch('/.netlify/functions/FetchVatsimdata')
                     .then(response => response.json())
                     .then(data => {
-                        console.log('Received data:', data);
-                        
-                        const updateElement = (id, value) => {
-                            const element = document.getElementById(id);
-                            if (element) {
-                                element.textContent = (parseFloat(value) || 0).toFixed(2);
-                            } else {
-                                console.error(`Element with id '${id}' not found`);
-                            }
-                        };
-                        
-                        updateElement('controller-hours', data.controllerHours);
-                        updateElement('pilot-hours', data.pilotHours);
+                        document.getElementById('controller-hours').textContent = ` ${data.controllerHours}`;
+                        document.getElementById('pilot-hours').textContent = ` ${data.pilotHours}`;
                     })
                     .catch(error => {
                         console.error('Error:', error);
-                        const statsElement = document.getElementById('vatsim-stats');
-                        if (statsElement) {
-                            statsElement.innerHTML = '<p class="error">Unable to load VATSIM statistics. Please try again later.</p>';
-                        } else {
-                            console.error("Stats element not found");
-                        }
+                        document.getElementById('vatsim-stats').textContent = 'Failed to load VATSIM stats';
                     });
             </script>
         </section>
