--- a/flying.html
+++ b/flying.html
@@ -26,7 +26,7 @@
             </nav>
         </header>
         <section class="Vatsim">
-          <h2>My VATSIM Experience</h2>
+          <h2>My VATSIM Controller Experience</h2>
           <div>
             <div class="gallery-grid">
                 <figure>
