--- a/flying.html
+++ b/flying.html
@@ -91,6 +91,10 @@
                         <img src="/img/IFR_Alaska.PNG" alt="Alaska Airlines Honoring Those Who Served"/>
                         <figcaption>Alaska Airlines Honoring Those Who Served</figcaption>
                     </figure>
+                    <figure>
+                        <img src="/img/GA_Friend.PNG" alt="Carbon Cub group flight"/>
+                        <figcaption>Carbon Cub group flight</figcaption>
+                    </figure>
                 </div>
             </div>
             <script>
