--- a/flying.html
+++ b/flying.html
@@ -40,7 +40,7 @@
             </div>
           </div>
           <div class="About-Vatsim-Controlling">
-            <p>I've been controlling on VATSIM since July of 2024. I started out as a pilot, but quickly found a love for controlling. I've been a part of the <a href="https://zseartcc.org" target="_blank" rel="noopener noreferrer">virtual ZSE ARTCC</a> and made many friends along the way.</p>
+            <p>I've been controlling on VATSIM since July of 2024. I started out as a pilot, but quickly found a love for controlling. I've been a part of the virtual ZSE ARTCC and made many friends along the way.</p>
           </div>
           <div id="vatsim-stats" class="vatsim-text">
             <div class="controller-section">
