--- a/flying.html
+++ b/flying.html
@@ -44,13 +44,13 @@
           </div>
           <div id="vatsim-stats" class="vatsim-text">
             <div class="controller-section">
-              <h4>Controller Ratings</h4>
+              <h3>Controller Ratings</h3>
               <ul class="certifications">
                 <li>S1 - Ground Controller <span class="hours" id="s1-hours">Loading...</span> hours</li>
                 <!-- <li>S2 - Tower Controller <span class="hours" id="s2-hours">Loading...</span> hours</li> -->
                 <!-- <li>S3 - Approach Controller <span class="hours" id="s3-hours">Loading...</span> hours</li> -->
               </ul>
-              <p>Total Controller Hours: <span id="controller-hours">Loading...</span></p>
+              <h4>Total Controller Hours: <span id="controller-hours">Loading...</span></h4>
             </div>
           </div>
           <script>
