--- a/flying.html
+++ b/flying.html
@@ -99,6 +99,7 @@
                     </figure>
                 </div>
             </div>
+            <h3>Total Pilot Hours: <span id="pilot-hours">Loading...</span></h3>
             <script>
                 fetch('/.netlify/functions/GetVatsimData')
                     .then(response => response.json())
