--- a/flying.html
+++ b/flying.html
@@ -47,8 +47,8 @@
               <h2>Controller Ratings</h2>
               <ul class="certifications">
                 <li>S1 - Ground Controller <span class="hours" id="s1-hours">Loading...</span> hours</li>
-                <li>S2 - Tower Controller <span class="hours" id="s2-hours">Loading...</span> hours</li>
-                <li>S3 - Approach Controller <span class="hours" id="s3-hours">Loading...</span> hours</li>
+                <!-- <li>S2 - Tower Controller <span class="hours" id="s2-hours">Loading...</span> hours</li> -->
+                <!-- <li>S3 - Approach Controller <span class="hours" id="s3-hours">Loading...</span> hours</li> -->
               </ul>
               <h3>Total Controller Hours: <span id="controller-hours">Loading...</span></h3>
             </div>
@@ -61,8 +61,8 @@
                       const elements = {
                           'controller-hours': data.controllerHours,
                           's1-hours': data.s1Hours,
-                          's2-hours': data.s2Hours,
-                          's3-hours': data.s3Hours
+                          // 's2-hours': data.s2Hours,
+                          // 's3-hours': data.s3Hours
                       };
 
                       for (const [id, value] of Object.entries(elements)) {
