--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
         <section id="contact" class="contact-form">
             <h3>Contact Me</h3>
-            <form name="contact" method="POST" data-netlify="true">
+            <form name="contact" method="POST" netlify>
                 <div class="form-group">
                     <label for="name">Name:</label>
                     <input type="text" id="name" name="name" required>
