removed contact form

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <iframe width="420" height="312" style="border: none;"></iframe>
             <p>I occasionally post videos on YouTube, featuring gameplay highlights and flight simulator content.</p>
         </div>
-        <section id="contact" class="contact-form">
+        <!-- <section id="contact" class="contact-form">
             <h3>Contact Me</h3>
             <form name="contact" method="POST" netlify>
                 <div class="form-group">
@@ -64,7 +64,7 @@
                 
                 <button type="submit">Send Message</button>
             </form>
-        </section>
+        </section> -->
         <footer>
             <p><small><img src="img/Progress_Pride_Flag.png"/> Created with passion by Hypekingfish <img src="img/Progress_Pride_Flag.png"/></small></p>
             <p><small>All content &copy; of Hypekingfish, unless previous copyright exists.</small></p>
