--- a/about.html
+++ b/about.html
@@ -70,9 +70,9 @@
                         </figcaption>
                     </figure>
                     <figure>
-                        <img src="" alt="Placeholder"/>
+                        <img src="/img/Wallpaper Engine/Porsche GT3 RS snow.png" alt="Porsche 911 GT3 RS"/>
                         <figcaption>
-                            <a href="https://steamcommunity.com/sharedfiles/filedetails/" target="_blank" rel="noopener noreferrer">
+                            <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=3399251831" target="_blank" rel="noopener noreferrer">
                                 Click Here to get this Wallpaper
                             </a>
                         </figcaption>
