--- a/flying.html
+++ b/flying.html
@@ -61,7 +61,7 @@
                       const elements = {
                           'controller-hours': data.controllerHours,
                           's1-hours': data.s1Hours,
-                          // 's2-hours': data.s2Hours,
+                          's2-hours': data.s2Hours,
                           // 's3-hours': data.s3Hours
                       };
 
