added temp kofi

--- a/streaming.html
+++ b/streaming.html
@@ -56,27 +56,15 @@
                 <li>Most Hours in Game: Microsoft Flight Simulator 2020 (1,500+)</li>
             </ul>
         </section>
-        <section class="Wallpaper_Engine">
-            <h2>Check Out my Wallpaper's</h2>
-            <div class="grid">
-                    <figure>
-                        <img src="img/Wallpaper Engine/Rivian RS1 snow.png" alt="Forza Horizon 5 Rivian RS1"/>
-                        <figcaption>
-                            <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=3399058846" target="_blank" rel="noopener noreferrer">
-                                Click Here to get this Wallpaper
-                            </a>
-                        </figcaption>
-                    </figure>
-                    <figure>
-                        <img src="/img/Wallpaper Engine/Porsche GT3 RS snow.png" alt="Porsche 911 GT3 RS"/>
-                        <figcaption>
-                            <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=3399251831" target="_blank" rel="noopener noreferrer">
-                                Click Here to get this Wallpaper
-                            </a>
-                        </figcaption>
-                    </figure>
-            </div>
-        </section>
+        <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
+        <script>
+        kofiWidgetOverlay.draw('fishnbuckjr02', {
+            'type': 'floating-chat',
+            'floating-chat.donateButton.text': 'Donate',
+            'floating-chat.donateButton.background-color': '#00b9fe',
+            'floating-chat.donateButton.text-color': '#fff'
+        });
+        </script>
         <footer>
             <p><small><img src="img/Progress_Pride_Flag.png"/> Created with passion by Hypekingfish <img src="img/Progress_Pride_Flag.png"/></small></p>
             <p><small>All content &copy; of Hypekingfish, unless previous copyright exists.</small></p>
