--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                     <li><a href="about.html">About</a></li>
                     <li><a href="flying.html">Flying</a></li>
                     <li><a href="gaming.html">Gaming</a></li>
+                    <li><a href="streaming.html">Streaming</a></li>
                 </ul>
             </nav>
         </header>
