--- a/streaming.html
+++ b/streaming.html
@@ -30,9 +30,11 @@
         </header>
         
         <section class="support-me">
-            <h1>Twitch Streaming</h1>
-            <p>Placeholder</p>
-            <img style="float: right;" src="img/FnBLogo_FINAL_800.png">
+            <div class="Twitch">
+                <h1>Twitch Streaming</h1>
+                <p>Placeholder</p>
+                <img style="float: right;" src="img/FnBLogo_FINAL_800.png">
+            </div>
             <a href="https://redragonshop.com/?aff=5506" aria-label="redragonshop" target="_blank" rel="noopener noreferrer">
                 <img src="img/logo透明.png" alt="Red Dragon Logo">
             </a>
