--- a/streaming.html
+++ b/streaming.html
@@ -28,11 +28,10 @@
                 </ul>
             </nav>
         </header>
-        
         <section class="support-me">
             <div class="Twitch">
                 <h1>Twitch Streaming</h1>
-                <p>Placeholder</p>
+                <p>Hello My name is Hypekingfish, I have been a twitch affiliate for over 4.5 years now and have enjoyed every bit of streaming. I am currently working on college classes so i dont have much time to stream but hopefrully i'll be able to get back into it soon. </p>
                 <img style="float: right;" src="img/FnBLogo_FINAL_800.png">
             </div>
             <a href="https://redragonshop.com/?aff=5506" aria-label="redragonshop" target="_blank" rel="noopener noreferrer">
