Sub Badges Test

--- a/flying.html
+++ b/flying.html
@@ -14,7 +14,10 @@
     <body class="container">
         <header>
             <h1>
-                <a href="index.html" aria-label="Go Home"><span>Hypekingfish</span></a> 
+                <a href="index.html" aria-label="Go Home">
+                    <img src="img/FnBLogo_FINAL_800.png" alt="Hypekingfish Logo"/>
+                    <span>Hypekingfish</span>
+                </a>
             </h1>
             <button type="button" tabindex="-1" hidden></button>
             <nav>
