--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
         <script src="https://kit.fontawesome.com/f78443c527.js" crossorigin="anonymous"></script>
     </head>
     <body class="container">
-        <header>
+        <header class="Header">
             <h1>
-                <a href="index.html" aria-label="Go Home"><span>Hypekingfish</span></a> 
+                <a href="index.html" aria-label="Go Home">
+                    <img src="img/FnBLogo_FINAL_800.png" alt="Hypekingfish Logo"/>
+                    <span>Hypekingfish</span>
+                </a>
             </h1>
             <button type="button" tabindex="-1" hidden></button>
             <nav>
