--- a/streaming.html
+++ b/streaming.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-
-<html lang="en">
+<html>
     <head>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, intial-scale=1.0" />
@@ -8,7 +7,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"/>
         <title>Hypekingfish</title>
-        <link href="style.css" rel="stylesheet"/>
+        <link href="style.css" rel="stylesheet">
         <link rel="icon" type="image/x-icon" href="/img/FnBLogo_FINAL_800.png">
         <script src="https://kit.fontawesome.com/f78443c527.js" crossorigin="anonymous"></script>
     </head>
@@ -28,22 +27,25 @@
                 </ul>
             </nav>
         </header>
-        <section class="support-me">
-            <div class="Twitch">
-                <h1>Twitch Streaming</h1>
-                <p>Hello My name is Hypekingfish, I have been a twitch affiliate for over 4.5 years now and have enjoyed every bit of streaming. I am currently working on college classes so i dont have much time to stream but hopefrully i'll be able to get back into it soon. </p>
-                <img style="float: right;" src="img/FnBLogo_FINAL_800.png">
+        <section class="subscriber_badges">
+            <h2>Subscriber Badges</h2>
+            <div>
+                <div class="gallery-grid">
+                    <figure>
+                        <img src="/img/Matt's Masterpieces/36PX/GAMEBOY_MONTH_YEARS-34.png" alt="1 Month Sub Badge"/>
+                        <figcaption>1 Month Sub Badge</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="" alt=""/>
+                        <figcaption></figcaption>
+                    </figure>
+                    <figure>
+                        <img src="" alt=""/>
+                        <figcaption></figcaption>
+                    </figure>
+                </div>
             </div>
-            <a href="https://redragonshop.com/?aff=5506" aria-label="redragonshop" target="_blank" rel="noopener noreferrer">
-                <img src="img/logo透明.png" alt="Red Dragon Logo">
-            </a>
-            <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script>
-            <script type='text/javascript'>kofiwidget2.init('Support me on Ko-fi', '#72a4f2', 'W7W3EZBRQ');kofiwidget2.draw();</script>
         </section>
-        <footer>
-            <p><small><img src="img/Progress_Pride_Flag.png"/> Created with passion by Hypekingfish <img src="img/Progress_Pride_Flag.png"/></small></p>
-            <p><small>All content &copy; of Hypekingfish, unless previous copyright exists.</small></p>
-        </footer>
         <section class="social-links">
             <div class="social-links">
                 <a href="https://github.com/[your-actual-username]" aria-label="GitHub" target="_blank" rel="noopener noreferrer">
