--- a/streaming.html
+++ b/streaming.html
@@ -30,7 +30,7 @@
         <section class="subscriber_badges">
             <h2>Subscriber Badges</h2>
             <div>
-                <div class="gallery-grid">
+                <div class="sub-gallery-grid">
                     <figure>
                         <img src="/img/Matt's Masterpieces/36PX/GAMEBOY_MONTH_YEARS-34.png" alt="1 Month Sub Badge"/>
                         <figcaption>1 Month Sub Badge</figcaption>
