--- a/streaming.html
+++ b/streaming.html
@@ -30,21 +30,9 @@
         <section class="subscriber_badges">
             <h2>Subscriber Badges</h2>
             <div>
-                <div class="sub-gallery-grid">
-                    <figure>
-                        <img src="/img/Matt's Masterpieces/36PX/GAMEBOY_MONTH_YEARS-34.png" alt="1 Month Sub Badge"/>
-                        <figcaption>1 Month Sub Badge</figcaption>
-                    </figure>
-                    <figure>
-                        <img src="" alt=""/>
-                        <figcaption></figcaption>
-                    </figure>
-                    <figure>
-                        <img src="" alt=""/>
-                        <figcaption></figcaption>
-                    </figure>
-                </div>
-            </div>
+                <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-34.png" alt="1 Month Subscriber Badge">
+                <span class="First-Month-Badge">1 Month</span>
+            </div>           
         </section>
         <section class="social-links">
             <div class="social-links">
