--- a/streaming.html
+++ b/streaming.html
@@ -29,10 +29,11 @@
         </header>
         <section class="subscriber_badges">
             <h2>Subscriber Badges</h2>
-            <div>
+            <div class="badge_images">
                 <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-34.png" alt="1 Month Subscriber Badge">
                 <span class="First-Month-Badge">1 Month</span>
-            </div>           
+                <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-35.png"> 
+            </div>
         </section>
         <section class="social-links">
             <div class="social-links">
