--- a/streaming.html
+++ b/streaming.html
@@ -31,8 +31,11 @@
             <h2>Subscriber Badges</h2>
             <div class="badge_images">
                 <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-34.png" alt="1 Month Subscriber Badge">
-                <span class="First-Month-Badge">1 Month</span>
-                <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-35.png"> 
+                <span>1 Month</span>
+                <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-35.png">
+                <span>2 Month</span>
+                <img src="img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-36.png">
+                <span>3 Months</span>
             </div>
         </section>
         <section class="social-links">
