--- a/streaming.html
+++ b/streaming.html
@@ -30,13 +30,40 @@
         <section class="subscriber_badges">
             <h2>Subscriber Badges</h2>
             <div class="badge_images">
-                <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-34.png" alt="1 Month Subscriber Badge">
-                <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-35.png">
-                <img src="img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-36.png">
-                <img src="img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-37.png">
-                <img src="img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-38.png">
+                <div>
+                    <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-34.png" alt="1 Month Subscriber Badge">
+                    <span>1 Month</span>
+                </div>
+                <div>
+                    <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-35.png" alt="2 Month Subscriber Badge">
+                    <span>2 Month</span>
+                </div>
+                <div>
+                    <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-36.png" alt="3 Month Subscriber Badge">
+                    <span>3 Months</span>
+                </div>
+                <div>
+                    <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-37.png" alt="6 Month Subscriber Badge">
+                    <span>6 Months</span>
+                </div>
+                <div>
+                    <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-38.png" alt="9 Month Subscriber Badge">
+                    <span>9 Months</span>
+                </div>
+                <div>
+                    <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-39.png" alt="12 Month Subscriber Badge">
+                    <span>1 Year</span>
+                </div>
+                <div>
+                    <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-40.png" alt="2 Year Subscriber Badge">
+                    <span>2 Years</span>
+                </div>
+                <div>
+                    <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-41.png" alt="3 Year Subscriber Badge">
+                    <span>3 Years</span>
+                </div>
             </div>
-        </section>
+        </section>        
         <section class="social-links">
             <div class="social-links">
                 <a href="https://github.com/[your-actual-username]" aria-label="GitHub" target="_blank" rel="noopener noreferrer">
