--- a/streaming.html
+++ b/streaming.html
@@ -63,7 +63,11 @@
                     <span>3 Years</span>
                 </div>
             </div>
-        </section>        
+        </section>
+        <footer>
+            <p><small><img src="img/Progress_Pride_Flag.png"/> Created with passion by Hypekingfish <img src="img/Progress_Pride_Flag.png"/></small></p>
+            <p><small>All content &copy; of Hypekingfish, unless previous copyright exists.</small></p>
+        </footer>        
         <section class="social-links">
             <div class="social-links">
                 <a href="https://github.com/[your-actual-username]" aria-label="GitHub" target="_blank" rel="noopener noreferrer">
