Added rest of Sub Badges

--- a/streaming.html
+++ b/streaming.html
@@ -62,6 +62,30 @@
                     <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-41.png" alt="3 Year Subscriber Badge">
                     <span>3 Years</span>
                 </div>
+                <div>
+                    <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-42.png" alt="3 Year Subscriber Badge">
+                    <span>4 Years</span>
+                </div>
+                <div>
+                    <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-43.png" alt="3 Year Subscriber Badge">
+                    <span>5 Years</span>
+                </div>
+                <div>
+                    <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-44.png" alt="3 Year Subscriber Badge">
+                    <span>6 Years</span>
+                </div>
+                <div>
+                    <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-45.png" alt="3 Year Subscriber Badge">
+                    <span>7 Years</span>
+                </div>
+                <div>
+                    <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-46.png" alt="3 Year Subscriber Badge">
+                    <span>8 Years</span>
+                </div>
+                <div>
+                    <img src="/img/Matt's Masterpieces/GAMEBOY_MONTH_YEARS-47.png" alt="3 Year Subscriber Badge">
+                    <span>9 Years</span>
+                </div>
             </div>
         </section>
         <footer>
