--- a/streaming.html
+++ b/streaming.html
@@ -27,6 +27,22 @@
                 </ul>
             </nav>
         </header>
+        <section class="twitch-embed">
+            <h2>Live on Twitch</h2>
+            <div id="twitch-embed"></div>
+        </section>
+        <div class="Player">
+            <script src="https://embed.twitch.tv/embed/v1.js"></script>
+            <script>
+                new Twitch.Embed("twitch-embed", {
+                    width: "100%",
+                    height: 480,
+                    channel: "hypekingfish",  // Your Twitch username
+                    layout: "video", // Can be "video-with-chat" or just "video"
+                    theme: "dark"
+                });
+            </script>
+        </div>    
         <section class="subscriber_badges">
             <h2>Subscriber Badges</h2>
             <div class="badge_images">
@@ -88,21 +104,6 @@
                 </div>
             </div>
         </section>
-        <section class="twitch-embed">
-            <h2>Live on Twitch</h2>
-            <div id="twitch-embed"></div>
-        </section>
-        
-        <script src="https://embed.twitch.tv/embed/v1.js"></script>
-        <script>
-            new Twitch.Embed("twitch-embed", {
-                width: "100%",
-                height: 480,
-                channel: "hypekingfish",  // Your Twitch username
-                layout: "video-with-chat", // Can be "video-with-chat" or just "video"
-                theme: "dark"
-            });
-        </script>
         <footer>
             <p><small><img src="img/Progress_Pride_Flag.png"/> Created with passion by Hypekingfish <img src="img/Progress_Pride_Flag.png"/></small></p>
             <p><small>All content &copy; of Hypekingfish, unless previous copyright exists.</small></p>
