--- a/streaming.html
+++ b/streaming.html
@@ -42,7 +42,10 @@
                     theme: "dark"
                 });
             </script>
-        </div>    
+        </div>
+        <section>
+            <h2>Stream Schedule</h2>
+        </section>
         <section class="subscriber_badges">
             <h2>Subscriber Badges</h2>
             <div class="badge_images">
@@ -103,6 +106,10 @@
                     <span>9 Years</span>
                 </div>
             </div>
+        </section>
+        <section class="vatsim-map">
+            <h2>VATSIM Live Map</h2>
+            <iframe src="https://map.vatsim.net/" width="100%" height="500px" frameborder="0"></iframe>
         </section>
         <footer>
             <p><small><img src="img/Progress_Pride_Flag.png"/> Created with passion by Hypekingfish <img src="img/Progress_Pride_Flag.png"/></small></p>
